refactor: things that i forgot again, i want to sleep